# kessel

./: .flake8  .gitignore  .gitlab-ci.yml  .pep8  CHANGELOG.md  COPYRIGHT  LICENSE  README.md  pyproject.toml  setup.cfg
.continue/: rules
.github/workflows/: ci.yaml  docs.yaml
.gitlab/: kessel.sh
.kessel/: init.sh
.kessel/workflows/: docs.yml  format.yml  test.py
.kessel/workflows/docs/: 0_init  0_init.sh  1_setup.sh  2_html  2_html.sh  __init__.py  html.sh  workflow.py
.kessel/workflows/format/: 0_init  0_init.sh  1_setup  2_autopep8  2_autopep8.sh  3_flake8  3_flake8.sh  4_mypy  4_mypy.sh  __init__.py  autopep8.sh  flake8.sh  isort.sh  mypy.sh  requirements.txt  workflow.py
.kessel/workflows/test/: workflow.py
doc/sphinx/: cli_reference.rst  conf.py  deployments.rst  index.rst  quickstart.rst  workflows.rst
doc/sphinx/tutorial/: cmake.rst  deployment.rst  spack.rst
etc/kessel/: bootstrap.yaml  include.yaml  lanl_pe_serve_mirror.yaml  mirrors.yaml  parent.yaml  repos.yaml  rocinante  tioga
etc/kessel/ATS3/: packages.yaml
etc/kessel/ATS4/: packages.yaml
etc/kessel/base/: envs.yaml  include.yaml  mirrors.yaml
etc/kessel/darwin/: compilers.yaml  packages.yaml
etc/kessel/macos_sequoia/: packages.yaml
etc/kessel/macos_tahoe/: packages.yaml
etc/kessel/selene/: packages.yaml
examples/tutorials/: CMakeLists.txt
lib/kessel/: __init__.py  colors.py  config.py  context.py  deployment.py  main.py  test_workflow.py  util.py  workflow.py
share/kessel/: kessel-completion.fish  kessel-completion.sh  setup-env.fish  setup-env.sh
(+192 files in other folders)
