[project]
name="kessel"
dynamic = ["version"]
description="Continuous integration and developer workflows."
requires-python=">=3.10"
dependencies=[
  "setuptools",
]

[tool.isort]
line_length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = "F401,E226,W503,W504"

[tool.autopep8]
max_line_length = 120
ignore = "E226,W503,W504"
